# SoftwareEngineeringKGS

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/database/: DatabaseManager.cpp  databasemanager.h
src/core/entity/: careerdirection.cpp  careerdirection.h  careerpath.cpp  careerpath.h  knowledgepoint.cpp  knowledgepoint.h  userprofile.cpp  userprofile.h
src/core/repository/: knowledgerepository.cpp  knowledgerepository.h  userrepository.cpp  userrepository.h
src/core/repository/storage/: iknowledgestorage.h  jsonknowledgestorage.cpp  jsonknowledgestorage.h
src/core/service/: careerservice.cpp  careerservice.h  loginservice.cpp  loginservice.h
src/ui/: careerselectiondialog.cpp  careerselectiondialog.h  careerselectiondialog.ui  knowledgegraph3dwidget.cpp  knowledgegraph3dwidget.h  logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
